--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,5 +11,43 @@
   "hindi": "Hindi",
   "marathi": "Marathi",
   "settings": "Settings",
-  "language": "Language"
+  "language": "Language",
+  "personalInformation": "Personal Information",
+  "addressInformation": "Address Information",
+  "healthInformation": "Health Information",
+  "medicalHistory": "Medical History",
+  "healthGoals": "Health Goals",
+  "fullName": "Full Name",
+  "dateOfBirth": "Date of Birth",
+  "gender": "Gender",
+  "male": "Male",
+  "female": "Female",
+  "other": "Other",
+  "emergencyContact": "Emergency Contact",
+  "address": "Address",
+  "village": "Village/City",
+  "district": "District",
+  "state": "State",
+  "pincode": "PIN Code",
+  "heightLabel": "Height",
+  "weightLabel": "Weight",
+  "bloodGroup": "Blood Group",
+  "chronicConditions": "Chronic Conditions",
+  "allergies": "Known Allergies",
+  "currentMedications": "Current Medications",
+  "familyMedicalHistory": "Family Medical History",
+  "dataConsent": "I consent to share my health data with assigned ASHA worker",
+  "profileIncomplete": "Please complete your profile",
+  "step": "Step",
+  "of": "of",
+  "next": "Next",
+  "previous": "Previous",
+  "save": "Save",
+  "complete": "Complete Profile",
+  "diabetes": "Diabetes",
+  "hypertension": "High BP",
+  "heartDisease": "Heart Disease",
+  "asthma": "Asthma",
+  "kidneyDisease": "Kidney Disease",
+  "thyroid": "Thyroid"
 }
