--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -11,5 +11,43 @@
   "hindi": "हिंदी",
   "marathi": "मराठी",
   "settings": "सेटिंग्स",
-  "language": "भाषा"
+  "language": "भाषा",
+  "personalInformation": "व्यक्तिगत जानकारी",
+  "addressInformation": "पता जानकारी",
+  "healthInformation": "स्वास्थ्य जानकारी",
+  "medicalHistory": "चिकित्सीय इतिहास",
+  "healthGoals": "स्वास्थ्य लक्ष्य",
+  "fullName": "पूरा नाम",
+  "dateOfBirth": "जन्म तिथि",
+  "gender": "लिंग",
+  "male": "पुरुष",
+  "female": "महिला",
+  "other": "अन्य",
+  "emergencyContact": "आपातकालीन संपर्क",
+  "address": "पता",
+  "village": "गांव/शहर",
+  "district": "जिला",
+  "state": "राज्य",
+  "pincode": "पिन कोड",
+  "heightLabel": "ऊंचाई",
+  "weightLabel": "वज़न",
+  "bloodGroup": "ब्लड ग्रुप",
+  "chronicConditions": "दीर्घकालिक रोग",
+  "allergies": "ज्ञात एलर्जी",
+  "currentMedications": "वर्तमान दवाएं",
+  "familyMedicalHistory": "पारिवारिक चिकित्सीय इतिहास",
+  "dataConsent": "मैं अपनी स्वास्थ्य जानकारी नियत आशा कार्यकर्ता के साथ साझा करने के लिए सहमत हूं",
+  "profileIncomplete": "कृपया अपना प्रोफ़ाइल पूरा करें",
+  "step": "चरण",
+  "of": "में से",
+  "next": "अगला",
+  "previous": "पिछला",
+  "save": "सहेजें",
+  "complete": "प्रोफ़ाइल पूर्ण करें",
+  "diabetes": "मधुमेह",
+  "hypertension": "उच्च रक्तचाप",
+  "heartDisease": "हृदय रोग",
+  "asthma": "दमा",
+  "kidneyDisease": "गुर्दे की बीमारी",
+  "thyroid": "थायराइड"
 }
