--- a/lib/l10n/app_mr.arb
+++ b/lib/l10n/app_mr.arb
@@ -11,5 +11,43 @@
   "hindi": "हिंदी",
   "marathi": "मराठी",
   "settings": "सेटिंग्स",
-  "language": "भाषा"
+  "language": "भाषा",
+  "personalInformation": "वैयक्तिक माहिती",
+  "addressInformation": "पत्ता माहिती",
+  "healthInformation": "आरोग्य माहिती",
+  "medicalHistory": "वैद्यकीय इतिहास",
+  "healthGoals": "आरोग्याचे उद्देश",
+  "fullName": "पूर्ण नाव",
+  "dateOfBirth": "जन्मतारीख",
+  "gender": "लिंग",
+  "male": "पुरुष",
+  "female": "महिला",
+  "other": "इतर",
+  "emergencyContact": "आपत्कालीन संपर्क",
+  "address": "पत्ता",
+  "village": "गाव/शहर",
+  "district": "जिल्हा",
+  "state": "राज्य",
+  "pincode": "पिन कोड",
+  "heightLabel": "उंची",
+  "weightLabel": "वजन",
+  "bloodGroup": "रक्त गट",
+  "chronicConditions": "दीर्घकालीन आजार",
+  "allergies": "ज्ञात अॅलर्जी",
+  "currentMedications": "सध्या घेत असलेली औषधे",
+  "familyMedicalHistory": "कौटुंबिक वैद्यकीय इतिहास",
+  "dataConsent": "मी माझी आरोग्य माहिती नियुक्त आशा कार्यकर्त्यासोबत शेअर करण्यास सहमती देतो/देते",
+  "profileIncomplete": "कृपया तुमचे प्रोफाइल पूर्ण करा",
+  "step": "टप्पा",
+  "of": "पैकी",
+  "next": "पुढे",
+  "previous": "मागे",
+  "save": "जतन करा",
+  "complete": "प्रोफाइल पूर्ण करा",
+  "diabetes": "मधुमेह",
+  "hypertension": "उच्च रक्तदाब",
+  "heartDisease": "हृदय रोग",
+  "asthma": "दमा",
+  "kidneyDisease": "मूत्रपिंडाचा आजार",
+  "thyroid": "थायरॉइड"
 }
